# codesoul

./: .gitignore  .npmrc  .prettierrc  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  integration-neo4j.yml  nightly.yml
apps/cli/: package.json  tsup.config.ts
apps/cli/src/: bin.ts  program.ts  wiring.ts
apps/cli/src/__tests__/: cli.test.ts  commands.test.ts  query-golden.test.ts  wiring.test.ts
apps/cli/src/commands/: doctor.ts  graph-export.ts  index.ts  inspect.ts  query.ts
fixtures/medium-ts-lib/: package.json
fixtures/medium-ts-lib/src/: bin.ts  cache.ts  index.ts  queue.ts  types.ts
fixtures/medium-ts-lib/src/utils/: format.ts  parse.ts
fixtures/tiny-python-lib/: pyproject.toml
fixtures/tiny-python-lib/src/: greet.py
fixtures/tiny-ts-lib/: package.json
fixtures/tiny-ts-lib/src/: farewell.ts  greet.ts  index.ts
plans/: CodeSoul RIG Next Steps.md  CodeSoul RIG.md  Phase0-Interfaces-Core-Schema.md.md  Phase0-Plan-v1.md  Phase0-TDD-Plan-Contract-Precision.md.md
scripts/: check-index-determinism.sh  test-neo4j-integration.sh
workers/model-server/: README.md  pyproject.toml
workers/model-server/src/codesoul_model_server/: __init__.py  __main__.py  api.py  config.py  embedder.py  reranker.py  schemas.py
workers/model-server/tests/: conftest.py  test_api.py  test_embedder.py  test_real_backends.py  test_reranker.py
