[project]
name = "codesoul-model-server"
version = "0.0.0"
description = "FastAPI model server for the @codesoul/embedder-http and @codesoul/reranker-http TS adapters."
readers = ["Sergio Potapov"]
requires-python = ">=3.13"
license = { text = "UNLICENSED" }
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
]

[project.optional-dependencies]
# Real model backends. Opt-in because torch is a multi-GB install and CI
# does not need it for the wire-contract test suite.
models = [
    "sentence-transformers==5.4.1",
    "transformers==5.7.0",
    "torch==2.11.0",
]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28",
]

[project.scripts]
codesoul-model-server = "codesoul_model_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codesoul_model_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
